--- a/src/components/alg/alg-conspect/sp/pages/elem-sp1.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp1.html
@@ -1,11 +1,13 @@
-<h1>Занятие 1. Вводное</h1>
+<article class="article">
+  <strong>Спортивное программирование в ЯрГУ</strong>
+  <p><a href="https://vkvideo.ru/@sportprog_yarsu">vkvideo.ru/@sportprog_yarsu</a></p>
+</article>
 
 
 <article class="article">
-  <p>Конспект курса <strong>Спортивное программирование в ЯрГУ</strong></p>
-  <p>Конспект видео <strong>Занятие 1. Вводное</strong> от 2024.09.14</p>
-  <p><a href="https://vkvideo.ru/@sportprog_yarsu">vkvideo.ru/@sportprog_yarsu</a></p>
-  <p><a href="https://codeforces.com/group/1LSR3R5twn/contest/550117">Codeforces Контест 550117</a></p>
+  <h1>Занятие 1. Вводное</h1>
+  <p>Конспект видео от 2024.09.14</p>
+  <p><a href="https://codeforces.com/group/1LSR3R5twn/contest/550117" target="_blank">Codeforces Контест 550117</a></p>
 </article>
 
 
@@ -13,17 +15,21 @@
 <article class="article">
   <h2>Содержание</h2>
 
-  <p><a href="#p1">Что необходимо для курса</a></p>
-  <p><a href="#p2">Что необходимо для написания кода</a></p>
-  <p><a href="#p3">Настройка Visual Studio</a></p>
-  <p><a href="#task1">Задача A. Арбуз</a></p>
-  <p><a href="#task2">Задача B. Слоник</a></p>
-  <p><a href="#task3">Задача C. Мишка и старший брат</a></p>
-  <p><a href="#task4">Задача D. A+B (пробная задача)</a></p>
-  <p><a href="#task5">Задача E. Сумма</a></p>
-  <p><a href="#task6">Задача F. Слово</a></p>
-  <p><a href="#task7">Задача G. Петя и строки</a></p>
-  <p><a href="#task8">Задача H. Матчи</a></p>
+  <p>
+    <a href="#p1">Что необходимо для курса</a>
+    <br><a href="#p2">Что необходимо для написания кода</a>
+    <br><a href="#p3">Настройка Visual Studio</a>
+  </p>
+  <p>
+    <a href="#task1">Задача A. Арбуз</a>
+    <br><a href="#task2">Задача B. Слоник</a>
+    <br><a href="#task3">Задача C. Мишка и старший брат</a>
+    <br><a href="#task4">Задача D. A+B (пробная задача)</a>
+    <br><a href="#task5">Задача E. Сумма</a>
+    <br><a href="#task6">Задача F. Слово</a>
+    <br><a href="#task7">Задача G. Петя и строки</a>
+    <br><a href="#task8">Задача H. Матчи</a>
+  </p>
 </article>
 
 
