--- a/src/components/alg/alg-conspect/sp/pages/elem-sp10.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp10.html
@@ -1,11 +1,13 @@
-<h1>Занятие 10. Базовые алгоритмы #3. Бинарный поиск на массиве</h1>
+<article class="article">
+  <strong>Спортивное программирование в ЯрГУ</strong>
+  <p><a href="https://vkvideo.ru/@sportprog_yarsu">vkvideo.ru/@sportprog_yarsu</a></p>
+</article>
 
 
 <article class="article">
-  <p>Конспект курса <strong>Спортивное программирование в ЯрГУ</strong></p>
-  <p>Конспект видео <strong>Занятие 10. Базовые алгоритмы #3. Бинарный поиск на массиве</strong> от 2024.11.16</p>
-  <p><a href="https://vkvideo.ru/@sportprog_yarsu">vkvideo.ru/@sportprog_yarsu</a></p>
-  <p><a href="https://codeforces.com/group/1LSR3R5twn/contest/567104">Codeforces Контест 567104</a></p>
+  <h1>Занятие 10. Базовые алгоритмы #3. Бинарный поиск на массиве</h1>
+  <p>Конспект видео от 2024.11.16</p>
+  <p><a href="https://codeforces.com/group/1LSR3R5twn/contest/567104" target="_blank">Codeforces Контест 567104</a></p>
 </article>
 
 
@@ -13,21 +15,25 @@
 <article class="article">
   <h2>Содержание</h2>
 
-  <p><a href="#p1">Бинарный поиск на массиве</a></p>
-  <p><a href="#task1">Задача A. Сложность двоичного поиска</a></p>
-  <p><a href="#task2">Задача B. Сурен в поисках числа</a></p>
-  <p><a href="#task3">Задача C. Таинство суммы</a></p>
-  <p><a href="#task4">Задача D. Поиск в массиве</a></p>
-  <p><a href="#task5">Задача E. Собственные числа Psych Up</a></p>
-  <p><a href="#task6">Задача F. Количество вхождений</a></p>
-  <p><a href="#task7">Задача G. Экзамен по истории</a></p>
-  <p><a href="#task8">Задача H. Функция Хевисайда</a></p>
-  <p><a href="#task9">Задача I. Модифицированный НОД</a></p>
-  <p><a href="#task10">Задача J. Коровам - колокольчиков</a></p>
-  <p><a href="#task11">Задача K. Про таблицу умножения</a></p>
-  <p><a href="#task12">Задача L. Неквадратное уравнение</a></p>
-  <p><a href="#task13">Задача M. Очередная задача на массиве</a></p>
-  <p><a href="#task14">Задача N. Запросы на поедание конфет</a></p>
+  <p>
+    <a href="#p1">Бинарный поиск на массиве</a>
+  </p>
+  <p>
+    <a href="#task1">Задача A. Сложность двоичного поиска</a>
+    <br><a href="#task2">Задача B. Сурен в поисках числа</a>
+    <br><a href="#task3">Задача C. Таинство суммы</a>
+    <br><a href="#task4">Задача D. Поиск в массиве</a>
+    <br><a href="#task5">Задача E. Собственные числа Psych Up</a>
+    <br><a href="#task6">Задача F. Количество вхождений</a>
+    <br><a href="#task7">Задача G. Экзамен по истории</a>
+    <br><a href="#task8">Задача H. Функция Хевисайда</a>
+    <br><a href="#task9">Задача I. Модифицированный НОД</a>
+    <br><a href="#task10">Задача J. Коровам - колокольчиков</a>
+    <br><a href="#task11">Задача K. Про таблицу умножения</a>
+    <br><a href="#task12">Задача L. Неквадратное уравнение</a>
+    <br><a href="#task13">Задача M. Очередная задача на массиве</a>
+    <br><a href="#task14">Задача N. Запросы на поедание конфет</a>
+  </p>
 </article>
 
 
