--- a/src/components/alg/alg-conspect/sp/pages/elem-sp11.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp11.html
@@ -1,11 +1,13 @@
-<h1>Занятие 11. Математика #1. Теория чисел. Основы</h1>
+<article class="article">
+  <strong>Спортивное программирование в ЯрГУ</strong>
+  <p><a href="https://vkvideo.ru/@sportprog_yarsu">vkvideo.ru/@sportprog_yarsu</a></p>
+</article>
 
 
 <article class="article">
-  <p>Конспект курса <strong>Спортивное программирование в ЯрГУ</strong></p>
-  <p>Конспект видео <strong>Занятие 11. Математика #1. Теория чисел. Основы</strong> от 2024.11.23</p>
-  <p><a href="https://vkvideo.ru/@sportprog_yarsu">vkvideo.ru/@sportprog_yarsu</a></p>
-  <p><a href="https://codeforces.com/group/1LSR3R5twn/contest/568747">Codeforces Контест 568747</a></p>
+  <h1>Занятие 11. Математика #1. Теория чисел. Основы</h1>
+  <p>Конспект видео от 2024.11.23</p>
+  <p><a href="https://codeforces.com/group/1LSR3R5twn/contest/568747" target="_blank">Codeforces Контест 568747</a></p>
 </article>
 
 
@@ -13,25 +15,34 @@
 <article class="article">
   <h2>Содержание</h2>
 
-  <p><a href="#p1">Теория чисел</a></p>
-  <p><a href="#task1">Задача A. ЕхАб И нОд</a></p>
-  <p><a href="#task2">Задача B. Максимальный НОД</a></p>
-  <p><a href="#task3">Задача C. Задача про LCM</a></p>
-  <p><a href="#task4">Задача D. Простые делители</a></p>
-  <p><a href="#task5">Задача E. Надо побольше</a></p>
-  <p><a href="#task6">Задача F. Решето Эратосфена</a></p>
-  <p><a href="#task7">Задача G. Простые числа easy</a></p>
-  <p><a href="#task8">Задача H. Простые числа</a></p>
-  <p><a href="#task9">Задача I. Коровки и первообразные корни</a></p>
-  <p><a href="#task10">Задача J. Целые точки отрезка</a></p>
-  <p><a href="#task11">Задача K. Никогда не спрашивайте даму о возрасте</a></p>
-  <p><a href="#task12">Задача L. Почти простые числа</a></p>
-  <p><a href="#task13">Задача M. Пары чисел</a></p>
-  <p><a href="#task14">Задача N. Мишка и покер</a></p>
-  <p><a href="#task15">Задача O. Мила и шоколад</a></p>
-  <p><a href="#task16">Задача P. Разложение на множители</a></p>
-  <p><a href="#task17">Задача Q. Прямоугольная игра</a></p>
-  <p><a href="#task18">Задача R. Эпическая игра</a></p>
+  <p>
+    <a href="#p1">Теория чисел</a>
+    <br><a href="#t1">Задача 1. Является ли число простым</a>
+    <br><a href="#t2">Задача 2. Вывести все делители числа</a>
+    <br><a href="#t3">Задача 3. Вывести все простые делители числа</a>
+    <br><a href="#t4">Задача 4. Решето Эратосфена</a>
+    <br><a href="#t5">Задача 5. Взятие ответа по остатку</a>
+  </p>
+  <p>
+    <a href="#task1">Задача A. ЕхАб И нОд</a>
+    <br><a href="#task2">Задача B. Максимальный НОД</a>
+    <br><a href="#task3">Задача C. Задача про LCM</a>
+    <br><a href="#task4">Задача D. Простые делители</a>
+    <br><a href="#task5">Задача E. Надо побольше</a>
+    <br><a href="#task6">Задача F. Решето Эратосфена</a>
+    <br><a href="#task7">Задача G. Простые числа easy</a>
+    <br><a href="#task8">Задача H. Простые числа</a>
+    <br><a href="#task9">Задача I. Коровки и первообразные корни</a>
+    <br><a href="#task10">Задача J. Целые точки отрезка</a>
+    <br><a href="#task11">Задача K. Никогда не спрашивайте даму о возрасте</a>
+    <br><a href="#task12">Задача L. Почти простые числа</a>
+    <br><a href="#task13">Задача M. Пары чисел</a>
+    <br><a href="#task14">Задача N. Мишка и покер</a>
+    <br><a href="#task15">Задача O. Мила и шоколад</a>
+    <br><a href="#task16">Задача P. Разложение на множители</a>
+    <br><a href="#task17">Задача Q. Прямоугольная игра</a>
+    <br><a href="#task18">Задача R. Эпическая игра</a>
+  </p>
 </article>
 
 
@@ -40,6 +51,236 @@
   <div class="anchor" id="p1"></div>
   <h3>Теория чисел</h3>
 
+  <p>Простое число - натуральной число, имеющее ровно два различных натуральных делителя. Простое число отлично от 1 и делится без остатка только на 1 и на само себя.</p>
+  <p>Примеры: 2, 3, 7, 11, 967, 1004911, 1000000007</p>
+  <p>Составное число - натуральное число, имеющее делители, отличные от 1 и самого себя. Каждое составное число является произведением двух или более натуральных чисел., больше 1. Все натуральные числа делятся на три непересекающиеся категории: простые, составные и 1.</p>
+  <p>Примеры: 4, 6, 10, 15, 625</p>
+</article>
+
+
+<!-- Задача 1. Является ли число простым -->
+<article class="article">
+  <div class="anchor" id="t1"></div>
+  <h3>Задача 1. Является ли число простым</h3>
+
+  <p>Проверить число на простоту. Является ли число n простым. Проверим линейным алгоритмом O(n)</p>
+
+  <details>
+    <summary>Решение за O(n)</summary>
+<pre>
+int n;
+cin >> n;
+int count = 0;
+
+for (int i = 1; i &lt;= n; i++) {
+  if (n % i == 0) {
+    count++;
+  }
+}
+
+if (count == 2) {
+  cout &lt;&lt; "YES";
+} else {
+  cout &lt;&lt; "NO";
+}
+</pre>
+  </details>
+
+  <p>Оптимизируем алгоритм. Заметим, что если число n является составным, то его можно представить в виде произведения n = a * b, где будет выполняться неравенства a ≤ sqrt(n) и sqrt(n) ≤ b. Воспользуемся этим свойством и будем проверять до корня от числа.</p>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+int n;
+cin >> n;
+int count = 0;
+
+for (int i = 2; i &lt;= sqrt(n); i++) { // плохо
+  if (n % i == 0) {
+    count++;
+  }
+}
+
+if (count == 0) {
+  cout &lt;&lt; "YES";
+} else {
+  cout &lt;&lt; "NO";
+}
+</pre>
+  </details>
+
+  <p>Улучшим реализацию отказавшись от операции sqrt(n).</p>
+  <details>
+    <summary>Решение</summary>
+<pre>
+int n;
+cin >> n;
+int count = 0;
+
+for (long long i = 2; i * i &lt;= n; i++) { // хорошо
+  if (n % i == 0) {
+    count++;
+  }
+}
+
+if (count == 0) {
+  cout &lt;&lt; "YES";
+} else {
+  cout &lt;&lt; "NO";
+}
+</pre>
+  </details>
+</article>
+
+
+<!-- Задача 2. Вывести все делители числа -->
+<article class="article">
+  <div class="anchor" id="t2"></div>
+  <h3>Задача 2. Вывести все делители числа</h3>
+
+  <p>Вывести все делители числа в порядке возрастания. Сделаем наивную реализацию за O(n)</p>
+
+  <details>
+    <summary>Решение за O(n)</summary>
+<pre>
+int n;
+cin >> n;
+
+for (int i = 1; i &lt;= n; i++) {
+  if (n % i == 0) {
+    cout &lt;&lt; i &lt;&lt; " ";
+  }
+}
+</pre>
+  </details>
+
+  <p>Улучшим реализацию. Будем бежать до sqrt(n) и сразу же будем определять пару делителей.</p>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+int n;
+cin >> n;
+vector&lt;int&gt;A;
+
+for (long long i = 1; i * i &lt;= n; i++) {
+  if (n % i == 0) {
+    A.push_back(i);
+    if (i * i != n) {
+      A.push_back(n / i);
+    }
+  }
+}
+
+sort(A.begin(), A.end());
+for (int i = 0; i &lt; A.size(); i++) {
+  cout &lt;&lt; A[i] &lt;&lt; " ";
+}
+</pre>
+  </details>
+</article>
+
+
+<!-- Задача 3. Вывести все простые делители числа -->
+<article class="article">
+  <div class="anchor" id="t3"></div>
+  <h3>Задача 3. Вывести все простые делители числа</h3>
+
+  <p>Разложить число n на простые множители. В цикле for начинаем с i=2. Будем делить число n на 2 до тех пор, пока оно делится на 2. Таким образом мы удаляем из n все делители равные 2,4,8 и т.д.Дальше i=3 и так мы удалим все простые делители из n от 2 до sqrt(n). Каждую итерацию выводим найденное простое число, пока n не станет равно 1 или не закончится цикл. Если цикл закончился, а n не равно 1, значит у нас остался еще один простой делитель и мы его тожедолжны вывести.</p>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+int n;
+cin >> n;
+
+for (long long i = 2; i * i &lt;= n; i++) {
+  while (n % i == 0) {
+    cout &lt;&lt; i;
+    n /= i;
+    if (n != 1) {
+      cout &lt;&lt; '*';
+    }
+  }
+}
+
+if (n != 1) {
+  cout &lt;&lt; n;
+}
+</pre>
+  </details>
+</article>
+
+
+<!-- Задача 4. Решето Эратосфена -->
+<article class="article">
+  <div class="anchor" id="t4"></div>
+  <h3>Задача 4. Решето Эратосфена</h3>
+
+  <p>Реализуем алгоритм решето Эратосфена. Алгоритм находит все простые числа от 1 до n.</p>
+
+  <h4>Решение</h4>
+  <p>Заводим вектор A для всех чисел от 0 до n. Числа 0 и 1 не являются простыми, поэтому сразу инициализируем их единицей. </p>
+  <p>В конце вектор A будет состоят из 0 и 1. Если A[i] = 0, то i является простым числом. Если A[i] = 1, то это число или 0 или 1 или составное.</p>
+  <p>Если в цикле for нашли простое число, то заходим во внутренний цикл for и вычеркиваем (A[i]=1) все числа, которые делятся на это простое число.</p>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+int n;
+cin >> n;
+vector&lt;int&gt;A(n + 1);
+A[0] = 1;
+A[1] = 1;
+
+for (int i = 2; i &lt;= n; i++) {
+  if (A[i] == 0) {
+    for (int j = 2 * i; j &lt;= n; j += i) {
+      A[j] = 1;
+    }
+  }
+}
+</pre>
+  </details>
+
+  <p>Приведем немного улучшенную реализацию алгоритма Решето Эратосфена. Трудоемкость алгоритма O(n * log2(n)).</p>
+  <p>Внутренний цикл for начнем не с j = 2*i, а с j = i*i. Это уменьшит количество итераций</p>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+int n;
+cin >> n;
+vector&lt;int&gt;A(n + 1);
+vector&lt;int&gt;B;
+A[0] = 1;
+A[1] = 1;
+
+for (long long i = 2; i &lt;= n; i++) {
+  if (A[i] == 0) {
+    B.push_back(i);
+    for (long long j = i * i; j &lt;= n; j += i) {
+      A[j] = 1;
+    }
+  }
+}
+</pre>
+  </details>
+</article>
+
+
+<!-- Задача 5. Взятие ответа по остатку -->
+<article class="article">
+  <div class="anchor" id="t5"></div>
+  <h3>Задача 5. Взятие ответа по остатку</h3>
+
+  <p>Рассмотрим задачу, где нам необходимо найти произведение целых чисел и выдать результат по остатку от числа mod.</p>
+  <p>Наивное решение это найти произведение чисел, а потом результат взять по остатку:</p>
+  <code>(a₁ * a₂ * a₃ * a₄ * ... * aₙ)%mod</code>
+  <p>К сожалению при перемножении чисел мы можем выйти за пределы типов данных.</p>
+  <p>Заметим, что любое число можно представить в виде n = k * mod + h, где 0 ≤ h ≤ mod.</p>
+  <p>Для того, чтобы не выходить за типы данных при перемножении, мы можем брать остаток после каждого умножения:</p>
+  <code>(((...(a₁%mod) * a₂%mod) * a₃%mod) * a₄%mod) * ... * aₙ)%mod</code>
 </article>
 
 
@@ -60,10 +301,10 @@
   <h4>Входные данные</h4>
   <p>Первая строка содержит одно целое число t (1≤t≤100) — количество наборов тестовых данных.</p>
 
-  <p>Каждый набор тестовых данных состоит из одной строки, содержащей одно целое число, x(2≤x≤109<sup>9</sup>).</p>
+  <p>Каждый набор тестовых данных состоит из одной строки, содержащей одно целое число, x(2≤x≤10⁹).</p>
 
   <h4>Выходные данные</h4>
-  <p>Для каждого набора тестовых данных, выведите пару целых положительных чисел a и b (1≤a,b≤10<sup>9</sup>)  таких, что НОД(a,b)+НОК(a,b)=x. Гарантируется, что решение всегда существует. Если существует несколько таких пар (a,b), вы можете вывести любую из них.</p>
+  <p>Для каждого набора тестовых данных, выведите пару целых положительных чисел a и b (1≤a,b≤10⁹)  таких, что НОД(a,b)+НОК(a,b)=x. Гарантируется, что решение всегда существует. Если существует несколько таких пар (a,b), вы можете вывести любую из них.</p>
 
   <h4>Пример</h4>
 <pre>
@@ -77,6 +318,30 @@
 </pre>
   <p>В первом наборе тестовых данных примера,  НОД(1,1)+НОК(1,1)=1+1=2</p>
   <p>Во втором наборе тестовых данных примера, НОД(6,4)+НОК(6,4)=2+12=14</p>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Нужно поисидеть и аккуратно повыписывать примеры для небольших x, чтобы понять какие бывают ответы. В качестве ответа подходят числа 1 и x-1.</p>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  int t;
+  cin >> t;
+
+  for (int test = 0; test &lt; t; test++) {
+    int x;
+    cin >> x;
+
+    // решение и вывод результата
+    cout &lt;&lt; 1 &lt;&lt; " " &lt;&lt; x - 1 &lt;&lt; '\n';
+  }
+}
+</pre>
+  </details>
 </article>
 
 
@@ -132,7 +397,7 @@
   <h4>Входные данные</h4>
   <p>В первой строке задано одно целое число t (1≤t≤10000) — количество наборов входных данных.</p>
 
-  <p>Каждый набор входных данных задается одной строкой, содержащей два целых числа l и r (1≤l&lt;r≤10<sup>9</sup>).</p>
+  <p>Каждый набор входных данных задается одной строкой, содержащей два целых числа l и r (1≤l&lt;r≤10⁹).</p>
 
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите два целых числа:</p>
@@ -155,6 +420,36 @@
 2 4
 -1 -1
 </pre>
+
+  <details>
+    <summary>Решение</summary>
+    <p>LCM это НОК (наименьшее общее кратное). Условие для x и y</p>
+    <code>l≤ x&lt; y ≤ LCM(x,y) ≤ r.</code>
+    <p>Решение шуточное. Мы предполагаем, что если выбрать x = l, а y = 2 * l, то НОК(x, y) = 2 * l. Тогда должно выполняться 2 * l &le; r. Расстояние между левой и правой границей должно быть r - l > l. Иначе НОК(x, y) > r и ответа не будет.</p>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  int t;
+  cin >> t;
+
+  for (int test = 0; test &lt; t; test++) {
+    int l, r;
+    cin >> l >> r;
+
+    // решение
+    if (2 * l &lt;= r) {
+      cout &lt;&lt; l &lt;&lt; " " &lt;&lt; 2 * l &lt;&lt; '\n';
+    } else {
+      cout &lt;&lt; "-1 -1\n";
+    }
+  }
+}
+</pre>
+  </details>
 </article>
 
 
@@ -394,6 +689,55 @@
   <h4>Пример 2</h4>
   <code>21</code>
   <code>8</code>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Переберем все числа от 1 до 3000 и найдем для них простые делители. Применим решето Эратосфена. Заведем вектор A для хранения решета Эратосфена. Будем записывать 1 если число не простое, 0 если простое.</p>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  int n;
+  cin >> n;
+
+  vector&lt;int&gt; A(n + 1);
+  A[0] = 1;
+  A[1] = 1;
+
+  // собираем решето Эратосфена
+  for (int i = 2; i &lt;= n; i++) {
+    if (A[i] == 0) {
+      for (int j = 2 * i; j &lt;= n; j += i) {
+        A[j] = 1;
+      }
+    }
+  }
+
+  // решение
+  int res = 0;
+  for (int i = 2; i &lt;= n; i++) {
+    int count = 0;
+    for (int j = 2; j &lt; A.size(); j++) {
+      if (A[j] == 0) {
+        if (i % j == 0) {
+          count++;
+        }
+      }
+    }
+    if (count == 2) {
+      res++;
+    }
+  }
+
+  // вывод результата
+  cout &lt;&lt; res;
+}
+</pre>
+  </details>
 </article>
 
 
@@ -485,7 +829,7 @@
   <p>Помогите Миле найти наибольшее количество шоколадок, которые она может получить.</p>
 
   <h4>Входные данные</h4>
-  <p>Единственная строка содержит пять целых чисел n, a, b, p и q (1 ≤ n, a, b, p, q ≤ 10<sup>9</sup>).</p>
+  <p>Единственная строка содержит пять целых чисел n, a, b, p и q (1 ≤ n, a, b, p, q ≤ 10⁹).</p>
 
   <h4>Выходные данные</h4>
   <p>Выведите одно целое число s — наибольшее количество шоколадок, которые может получить Мила.</p>
@@ -499,6 +843,41 @@
   <h4>Пример 2</h4>
   <code>20 2 3 3 5</code>
   <code>51</code>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Посчитаем два результата и выберем из них больший. res1 для досок покрашенных в красный цвет и res2 - в синий, среди тех что могут быть покрашени и в красный и в синий.</p>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+long long gcd(long long a, long long b) {
+  while (a > 0 && b > 0) {
+    if (a > b) {
+      a = a % b;
+    } else {
+      b = b % a;
+    }
+  }
+  return a + b;
+}
+
+int main() {
+  // ввод данных
+  long long n, a, b, p, q;
+  cin >> n >> a >> b >> p >> q;
+
+  // решение
+  long long nok = a * b / gcd(a, b);
+  long long res1 = p * (n / a) + q * (n / b - n / nok);
+  long long res2 = p * (n / a - n / nok) + q * (n / b);
+
+  // вывод результата
+  cout &lt;&lt; max(res1, res2);
+}
+</pre>
+  </details>
 </article>
 
 
@@ -616,5 +995,48 @@
   <code>1 1 100</code>
   <code>1</code>
   <p>Во втором примере каждый игрок на каждом ходу берет из кучки по одному камню. Так как n четное, последний камень возьмет Антисемен, а Семен после этого не сможет сделать ход.</p>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Напишем функцию gcd и смоделируем ход игры</p>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+// наибольший общий делитель
+long long gcd(long long a, long long b) {
+  while (a > 0 && b > 0) {
+    if (a > b) {
+      a = a % b;
+    } else {
+      b = b % a;
+    }
+  }
+  return a + b;
+}
+
+int main() {
+  // ввод данных
+  long long a, b, n;
+  cin >> a >> b >> n;
+
+  // решение
+  long long cnt = 0;
+  while (n != 0) {
+    if (cnt == 0) {
+      n -= gcd(a, n);
+      cnt = (cnt + 1) % 2;
+    } else {
+      n -= gcd(b, n);
+      cnt = (cnt + 1) % 2;
+    }
+  }
+
+  // вывод результата
+  cout &lt;&lt; (cnt + 1) % 2;
+}
+</pre>
+  </details>
 </article>
 
