--- a/src/components/alg/alg-conspect/sp/pages/elem-sp12.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp12.html
@@ -1,11 +1,13 @@
-<h1>Занятие 12. Структуры данных #1. stack, queue, deque</h1>
+<article class="article">
+  <strong>Спортивное программирование в ЯрГУ</strong>
+  <p><a href="https://vkvideo.ru/@sportprog_yarsu">vkvideo.ru/@sportprog_yarsu</a></p>
+</article>
 
 
 <article class="article">
-  <p>Конспект курса <strong>Спортивное программирование в ЯрГУ</strong></p>
-  <p>Конспект видео <strong>Занятие 12. Структуры данных #1. stack, queue, deque</strong> от 2024.11.30</p>
-  <p><a href="https://vkvideo.ru/@sportprog_yarsu">vkvideo.ru/@sportprog_yarsu</a></p>
-  <p><a href="https://codeforces.com/group/1LSR3R5twn/contest/568747">Codeforces Контест 570478</a></p>
+  <h1>Занятие 12. Структуры данных #1. stack, queue, deque</h1>
+  <p>Конспект видео от 2024.11.30</p>
+  <p><a href="https://codeforces.com/group/1LSR3R5twn/contest/568747" target="_blank">Codeforces Контест 570478</a></p>
 </article>
 
 
@@ -13,7 +15,9 @@
 <article class="article">
   <h2>Содержание</h2>
 
-  <p><a href="#p1">Структуры данных</a></p>
+  <p>
+    <a href="#p1">Структуры данных</a>
+  </p>
   <p>
     <a href="#task1">Задача A. Последовательность</a>
     <br><a href="#task2">Задача B. Скобки Скобочки</a>
