--- a/src/components/alg/alg-conspect/sp/pages/elem-sp2.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp2.html
@@ -1,11 +1,13 @@
-<h1>Занятие 2. Основы C++ #1. Переменные, ветвление, циклы</h1>
+<article class="article">
+  <strong>Спортивное программирование в ЯрГУ</strong>
+  <p><a href="https://vkvideo.ru/@sportprog_yarsu">vkvideo.ru/@sportprog_yarsu</a></p>
+</article>
 
 
 <article class="article">
-  <p>Конспект курса <strong>Спортивное программирование в ЯрГУ</strong></p>
-  <p>Конспект видео <strong>Занятие 2. Основы C++ #1. Переменные, ветвление, циклы</strong> от 2024.09.22</p>
-  <p><a href="https://vkvideo.ru/@sportprog_yarsu">vkvideo.ru/@sportprog_yarsu</a></p>
-  <p><a href="https://codeforces.com/group/1LSR3R5twn/contest/550879">Codeforces Контест 550879</a></p>
+  <h1>Занятие 2. Основы C++ #1. Переменные, ветвление, циклы</h1>
+  <p>Конспект видео от 2024.09.22</p>
+  <p><a href="https://codeforces.com/group/1LSR3R5twn/contest/550879" target="_blank">Codeforces Контест 550879</a></p>
 </article>
 
 
@@ -13,32 +15,36 @@
 <article class="article">
   <h2>Содержание</h2>
 
-  <p><a href="#p1">Структура программы</a></p>
-  <p><a href="#p2">Синтаксические правила</a></p>
-  <p><a href="#p3">Типы данных</a></p>
-  <p><a href="#p4">Переменные</a></p>
-  <p><a href="#p5">Операторы</a></p>
-  <p><a href="#p6">Преобразование типов данных</a></p>
-  <p><a href="#p7">Ввод/вывод информации</a></p>
-  <p><a href="#p8">Операции сравнения</a></p>
-  <p><a href="#p9">Ветвление</a></p>
-  <p><a href="#p10">Циклы</a></p>
-  <p><a href="#task1">Задача A. Укладка доминошками</a></p>
-  <p><a href="#task2">Задача B. Осьминожки</a></p>
-  <p><a href="#task3">Задача C. Високосный год</a></p>
-  <p><a href="#task4">Задача D. Театральная площадь</a></p>
-  <p><a href="#task5">Задача E. Петины братья</a></p>
-  <p><a href="#task6">Задача F. Куплю лопату</a></p>
-  <p><a href="#task7">Задача G. Солдат и бананы</a></p>
-  <p><a href="#task8">Задача H. Почти счастливое число</a></p>
-  <p><a href="#task9">Задача I. Полицейские-рекруты</a></p>
-  <p><a href="#task10">Задача J. Дивизон</a></p>
-  <p><a href="#task11">Задача K. Счастливый</a></p>
-  <p><a href="#task12">Задача L. Ваня и кубики</a></p>
-  <p><a href="#task13">Задача M. Санаторий</a></p>
-  <p><a href="#task14">Задача N. Кормен — лучший друг человека</a></p>
-  <p><a href="#task15">Задача O. Деление пиццы</a></p>
-  <p><a href="#task16">Задача P. Парад</a></p>
+  <p>
+    <a href="#p1">Структура программы</a>
+    <br><a href="#p2">Синтаксические правила</a>
+    <br><a href="#p3">Типы данных</a>
+    <br><a href="#p4">Переменные</a>
+    <br><a href="#p5">Операторы</a>
+    <br><a href="#p6">Преобразование типов данных</a>
+    <br><a href="#p7">Ввод/вывод информации</a>
+    <br><a href="#p8">Операции сравнения</a>
+    <br><a href="#p9">Ветвление</a>
+    <br><a href="#p10">Циклы</a>
+  </p>
+  <p>
+    <a href="#task1">Задача A. Укладка доминошками</a>
+    <br><a href="#task2">Задача B. Осьминожки</a>
+    <br><a href="#task3">Задача C. Високосный год</a>
+    <br><a href="#task4">Задача D. Театральная площадь</a>
+    <br><a href="#task5">Задача E. Петины братья</a>
+    <br><a href="#task6">Задача F. Куплю лопату</a>
+    <br><a href="#task7">Задача G. Солдат и бананы</a>
+    <br><a href="#task8">Задача H. Почти счастливое число</a>
+    <br><a href="#task9">Задача I. Полицейские-рекруты</a>
+    <br><a href="#task10">Задача J. Дивизон</a>
+    <br><a href="#task11">Задача K. Счастливый</a>
+    <br><a href="#task12">Задача L. Ваня и кубики</a>
+    <br><a href="#task13">Задача M. Санаторий</a>
+    <br><a href="#task14">Задача N. Кормен — лучший друг человека</a>
+    <br><a href="#task15">Задача O. Деление пиццы</a>
+    <br><a href="#task16">Задача P. Парад</a>
+  </p>
 </article>
 
 
