--- a/src/components/alg/alg-conspect/sp/pages/elem-sp4.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp4.html
@@ -1,11 +1,13 @@
-<h1>Занятие 4. Основы С++ #3. vector, cmath</h1>
+<article class="article">
+  <strong>Спортивное программирование в ЯрГУ</strong>
+  <p><a href="https://vkvideo.ru/@sportprog_yarsu">vkvideo.ru/@sportprog_yarsu</a></p>
+</article>
 
 
 <article class="article">
-  <p>Конспект курса <strong>Спортивное программирование в ЯрГУ</strong></p>
-  <p>Конспект видео <strong>Занятие 4. Основы С++ #3. vector, cmath</strong> от 2024.10.05</p>
-  <p><a href="https://vkvideo.ru/@sportprog_yarsu">vkvideo.ru/@sportprog_yarsu</a></p>
-  <p><a href="https://codeforces.com/group/1LSR3R5twn/contest/555156">Codeforces Контест 555156</a></p>
+  <h1>Занятие 4. Основы С++ #3. vector, cmath</h1>
+  <p>Конспект видео от 2024.10.05</p>
+  <p><a href="https://codeforces.com/group/1LSR3R5twn/contest/555156" target="_blank">Codeforces Контест 555156</a></p>
 </article>
 
 
@@ -13,26 +15,30 @@
 <article class="article">
   <h2>Содержание</h2>
 
-  <p><a href="#p1">vector</a></p>
-  <p><a href="#p2">cmath</a></p>
-  <p><a href="#p3">algorithm</a></p>
-  <p><a href="#p4">Матрицы</a></p>
-  <p><a href="#task1">Задача A. Последовательность</a></p>
-  <p><a href="#task2">Задача B. Газировкопитие</a></p>
-  <p><a href="#task3">Задача C. Конфеты и две сестры</a></p>
-  <p><a href="#task4">Задача D. Сделай возрастающую</a></p>
-  <p><a href="#task5">Задача E. Праздник равенства</a></p>
-  <p><a href="#task6">Задача F. Формирование команд</a></p>
-  <p><a href="#task7">Задача G. Задача о делимости</a></p>
-  <p><a href="#task8">Задача H. Четный массив</a></p>
-  <p><a href="#task9">Задача I. Сумма круглых чисел</a></p>
-  <p><a href="#task10">Задача J. Скучные квартиры</a></p>
-  <p><a href="#task11">Задача K. Точки на прямой</a></p>
-  <p><a href="#task12">Задача L. Смена направления</a></p>
-  <p><a href="#task13">Задача M. Виталий и ночь</a></p>
-  <p><a href="#task14">Задача N. Николай и перестановка</a></p>
-  <p><a href="#task15">Задача O. X-сумма</a></p>
-  <p><a href="#task16">Задача P. Переключение гравитации</a></p>
+  <p>
+    <a href="#p1">vector</a>
+    <br><a href="#p2">cmath</a>
+    <br><a href="#p3">algorithm</a>
+    <br><a href="#p4">Матрицы</a>
+  </p>
+  <p>
+    <a href="#task1">Задача A. Последовательность</a>
+    <br><a href="#task2">Задача B. Газировкопитие</a>
+    <br><a href="#task3">Задача C. Конфеты и две сестры</a>
+    <br><a href="#task4">Задача D. Сделай возрастающую</a>
+    <br><a href="#task5">Задача E. Праздник равенства</a>
+    <br><a href="#task6">Задача F. Формирование команд</a>
+    <br><a href="#task7">Задача G. Задача о делимости</a>
+    <br><a href="#task8">Задача H. Четный массив</a>
+    <br><a href="#task9">Задача I. Сумма круглых чисел</a>
+    <br><a href="#task10">Задача J. Скучные квартиры</a>
+    <br><a href="#task11">Задача K. Точки на прямой</a>
+    <br><a href="#task12">Задача L. Смена направления</a>
+    <br><a href="#task13">Задача M. Виталий и ночь</a>
+    <br><a href="#task14">Задача N. Николай и перестановка</a>
+    <br><a href="#task15">Задача O. X-сумма</a>
+    <br><a href="#task16">Задача P. Переключение гравитации</a>
+  </p>
 </article>
 
 
