--- a/src/components/alg/alg-conspect/sp/pages/elem-sp5.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp5.html
@@ -1,11 +1,14 @@
-<h1>Занятие 5. Основы С++ #4. string</h1>
+<article class="article">
+  <strong>Спортивное программирование в ЯрГУ</strong>
+  <p><a href="https://vkvideo.ru/@sportprog_yarsu">vkvideo.ru/@sportprog_yarsu</a></p>
+</article>
 
 
 <article class="article">
-  <p>Конспект курса <strong>Спортивное программирование в ЯрГУ</strong></p>
-  <p>Конспект видео <strong>Занятие 5. Основы С++ #4. string</strong> от 2024.10.12</p>
+  <h1>Занятие 5. Основы С++ #4. string</h1>
+  <p>Конспект видео от 2024.10.12</p>
   <p><a href="https://vkvideo.ru/@sportprog_yarsu">vkvideo.ru/@sportprog_yarsu</a></p>
-  <p><a href="https://codeforces.com/group/1LSR3R5twn/contest/557609">Codeforces Контест 557609</a></p>
+  <p><a href="https://codeforces.com/group/1LSR3R5twn/contest/557609" target="_blank">Codeforces Контест 557609</a></p>
 </article>
 
 
@@ -13,26 +16,30 @@
 <article class="article">
   <h2>Содержание</h2>
 
-  <p><a href="#p1">string</a></p>
-  <p><a href="#p2">Функции на символы</a></p>
-  <p><a href="#p3">getline()</a></p>
-  <p><a href="#task1">Задача A. Капитализация слова</a></p>
-  <p><a href="#task2">Задача B. икортС</a></p>
-  <p><a href="#task3">Задача C. Палиндром</a></p>
-  <p><a href="#task4">Задача D. Слишком длинные слова</a></p>
-  <p><a href="#task5">Задача E. Число вхождений</a></p>
-  <p><a href="#task6">Задача F. Девушка или Юноша</a></p>
-  <p><a href="#task7">Задача G. Панграмма</a></p>
-  <p><a href="#task8">Задача H. Два массива и обмены</a></p>
-  <p><a href="#task9">Задача I. Ночь в музее</a></p>
-  <p><a href="#task10">Задача J. Дежавю</a></p>
-  <p><a href="#task11">Задача K. Не просто красивые строки</a></p>
-  <p><a href="#task12">Задача L. Пароли</a></p>
-  <p><a href="#task13">Задача M. Подделка</a></p>
-  <p><a href="#task14">Задача N. Чудесная раскраска - 1</a></p>
-  <p><a href="#task15">Задача O. Интересный рассказ</a></p>
-  <p><a href="#task16">Задача P. Самые похожие слова</a></p>
-  <p><a href="#task17">Задача Q. Удали два символа</a></p>
+  <p>
+    <a href="#p1">string</a>
+    <br><a href="#p2">Функции на символы</a>
+    <br><a href="#p3">getline()</a>
+  </p>
+  <p>
+    <a href="#task1">Задача A. Капитализация слова</a>
+    <br><a href="#task2">Задача B. икортС</a>
+    <br><a href="#task3">Задача C. Палиндром</a>
+    <br><a href="#task4">Задача D. Слишком длинные слова</a>
+    <br><a href="#task5">Задача E. Число вхождений</a>
+    <br><a href="#task6">Задача F. Девушка или Юноша</a>
+    <br><a href="#task7">Задача G. Панграмма</a>
+    <br><a href="#task8">Задача H. Два массива и обмены</a>
+    <br><a href="#task9">Задача I. Ночь в музее</a>
+    <br><a href="#task10">Задача J. Дежавю</a>
+    <br><a href="#task11">Задача K. Не просто красивые строки</a>
+    <br><a href="#task12">Задача L. Пароли</a>
+    <br><a href="#task13">Задача M. Подделка</a>
+    <br><a href="#task14">Задача N. Чудесная раскраска - 1</a>
+    <br><a href="#task15">Задача O. Интересный рассказ</a>
+    <br><a href="#task16">Задача P. Самые похожие слова</a>
+    <br><a href="#task17">Задача Q. Удали два символа</a>
+  </p>
 </article>
 
 
