--- a/src/components/alg/alg-conspect/sp/pages/elem-sp6.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp6.html
@@ -1,11 +1,13 @@
-<h1>Занятие 6. Основы С++ #5. Функции</h1>
+<article class="article">
+  <strong>Спортивное программирование в ЯрГУ</strong>
+  <p><a href="https://vkvideo.ru/@sportprog_yarsu">vkvideo.ru/@sportprog_yarsu</a></p>
+</article>
 
 
 <article class="article">
-  <p>Конспект курса <strong>Спортивное программирование в ЯрГУ</strong></p>
-  <p>Конспект видео <strong>Занятие 6. Основы С++ #5. Функции</strong> от 2024.10.19</p>
-  <p><a href="https://vkvideo.ru/@sportprog_yarsu">vkvideo.ru/@sportprog_yarsu</a></p>
-  <p><a href="https://codeforces.com/group/1LSR3R5twn/contest/559129">Codeforces Контест 559129</a></p>
+  <h1>Занятие 6. Основы С++ #5. Функции</h1>
+  <p>Конспект видео от 2024.10.19</p>
+  <p><a href="https://codeforces.com/group/1LSR3R5twn/contest/559129" target="_blank">Codeforces Контест 559129</a></p>
 </article>
 
 
@@ -13,30 +15,34 @@
 <article class="article">
   <h2>Содержание</h2>
 
-  <p><a href="#p1">Функции</a></p>
-  <p><a href="#p2">Рекурсия</a></p>
-  <p><a href="#p3">Компаратор</a></p>
-  <p><a href="#p4">Работа с файлами</a></p>
-  <p><a href="#task1">Задача A. НОД</a></p>
-  <p><a href="#task2">Задача B. Без массивов</a></p>
-  <p><a href="#task3">Задача C. Длинное выражение</a></p>
-  <p><a href="#task4">Задача D. Факториал (очень простой)</a></p>
-  <p><a href="#task5">Задача E. Разрезание на квадраты</a></p>
-  <p><a href="#task6">Задача F. Сортировка Таноса</a></p>
-  <p><a href="#task7">Задача G. Медиана</a></p>
-  <p><a href="#task8">Задача H. Эпическая игра</a></p>
-  <p><a href="#task9">Задача I. Вор и спички</a></p>
-  <p><a href="#task10">Задача J. Amr и музыка</a></p>
-  <p><a href="#task11">Задача K. Грибоводство</a></p>
-  <p><a href="#task12">Задача L. z-сортировка</a></p>
-  <p><a href="#task13">Задача M. Сортировка сдвигами</a></p>
-  <p><a href="#task14">Задача N. Фотограф</a></p>
-  <p><a href="#task15">Задача O. Бомбы</a></p>
-  <p><a href="#task16">Задача P. Пары чисел</a></p>
-  <p><a href="#task17">Задача Q. Плотный массив</a></p>
-  <p><a href="#task18">Задача R. Не соседняя матрица</a></p>
-  <p><a href="#task19">Задача S. Золотая лихорадка</a></p>
-  <p><a href="#task20">Задача T. Mex подмножеств</a></p>
+  <p>
+    <a href="#p1">Функции</a>
+    <br><a href="#p2">Рекурсия</a>
+    <br><a href="#p3">Компаратор</a>
+    <br><a href="#p4">Работа с файлами</a>
+  </p>
+  <p>
+    <a href="#task1">Задача A. НОД</a>
+    <br><a href="#task2">Задача B. Без массивов</a>
+    <br><a href="#task3">Задача C. Длинное выражение</a>
+    <br><a href="#task4">Задача D. Факториал (очень простой)</a>
+    <br><a href="#task5">Задача E. Разрезание на квадраты</a>
+    <br><a href="#task6">Задача F. Сортировка Таноса</a>
+    <br><a href="#task7">Задача G. Медиана</a>
+    <br><a href="#task8">Задача H. Эпическая игра</a>
+    <br><a href="#task9">Задача I. Вор и спички</a>
+    <br><a href="#task10">Задача J. Amr и музыка</a>
+    <br><a href="#task11">Задача K. Грибоводство</a>
+    <br><a href="#task12">Задача L. z-сортировка</a>
+    <br><a href="#task13">Задача M. Сортировка сдвигами</a>
+    <br><a href="#task14">Задача N. Фотограф</a>
+    <br><a href="#task15">Задача O. Бомбы</a>
+    <br><a href="#task16">Задача P. Пары чисел</a>
+    <br><a href="#task17">Задача Q. Плотный массив</a>
+    <br><a href="#task18">Задача R. Не соседняя матрица</a>
+    <br><a href="#task19">Задача S. Золотая лихорадка</a>
+    <br><a href="#task20">Задача T. Mex подмножеств</a>
+  </p>
 </article>
 
 
