--- a/src/components/alg/alg-conspect/sp/pages/elem-sp7.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp7.html
@@ -1,11 +1,13 @@
-<h1>Занятие 7. Основы С++ #6. Линейные алгоритмы</h1>
+<article class="article">
+  <strong>Спортивное программирование в ЯрГУ</strong>
+  <p><a href="https://vkvideo.ru/@sportprog_yarsu">vkvideo.ru/@sportprog_yarsu</a></p>
+</article>
 
 
 <article class="article">
-  <p>Конспект курса <strong>Спортивное программирование в ЯрГУ</strong></p>
-  <p>Конспект видео <strong>Занятие 7. Основы С++ #6. Линейные алгоритмы</strong> от 2024.10.26</p>
-  <p><a href="https://vkvideo.ru/@sportprog_yarsu">vkvideo.ru/@sportprog_yarsu</a></p>
-  <p><a href="https://codeforces.com/group/1LSR3R5twn/contest/561317">Codeforces Контест 561317</a></p>
+  <h1>Занятие 7. Основы С++ #6. Линейные алгоритмы</h1>
+  <p>Конспект видео от 2024.10.26</p>
+  <p><a href="https://codeforces.com/group/1LSR3R5twn/contest/561317" target="_blank">Codeforces Контест 561317</a></p>
 </article>
 
 
@@ -13,34 +15,38 @@
 <article class="article">
   <h2>Содержание</h2>
 
-  <p><a href="#p">Линейные алгоритмы</a></p>
-  <p><a href="#t1">Задача 1. Какого элемента нет</a></p>
-  <p><a href="#t2">Задача 2. Максимальная сумма</a></p>
-  <p><a href="#t3">Задача 3. Максимальная разница</a></p>
-  <p><a href="#t4">Задача 4. Минимальный и максимальный</a></p>
-  <p><a href="#t5">Задача 5. Пять максимумов</a></p>
-  <p><a href="#t6">Задача 6. Частотный словарь</a></p>
-  <p><a href="#task1">Задача A. Правый минус левый</a></p>
-  <p><a href="#task2">Задача B. Клиппи и Мерлин грабят банк</a></p>
-  <p><a href="#task3">Задача C. Сумма на подотрезке</a></p>
-  <p><a href="#task4">Задача D. Пропажа числа</a></p>
-  <p><a href="#task5">Задача E. Министерство правды</a></p>
-  <p><a href="#task6">Задача F. Ётта</a></p>
-  <p><a href="#task7">Задача G. Катя и красивое число</a></p>
-  <p><a href="#task8">Задача H. Черви и ослы</a></p>
-  <p><a href="#task9">Задача I. Четные, но не кратные шести</a></p>
-  <p><a href="#task10">Задача J. Задача без легенды</a></p>
-  <p><a href="#task11">Задача K. Двапалиндром</a></p>
-  <p><a href="#task12">Задача L. Пилообразная последовательность</a></p>
-  <p><a href="#task13">Задача M. Противоположности притягиваются</a></p>
-  <p><a href="#task14">Задача N. Футбол</a></p>
-  <p><a href="#task15">Задача O. Медиана Профессора Р.</a></p>
-  <p><a href="#task16">Задача P. Сортировка подсчётом</a></p>
-  <p><a href="#task17">Задача Q. Рамки для картин</a></p>
-  <p><a href="#task18">Задача R. Веселая шутка</a></p>
-  <p><a href="#task19">Задача S. LuoTianyi и шоу</a></p>
-  <p><a href="#task20">Задача T. Конец света</a></p>
-  <p><a href="#task21">Задача U. Мистер совершенство</a></p>
+  <p>
+    <a href="#p">Линейные алгоритмы</a>
+  </p>
+  <p>
+    <a href="#t1">Задача 1. Какого элемента нет</a>
+    <br><a href="#t2">Задача 2. Максимальная сумма</a>
+    <br><a href="#t3">Задача 3. Максимальная разница</a>
+    <br><a href="#t4">Задача 4. Минимальный и максимальный</a>
+    <br><a href="#t5">Задача 5. Пять максимумов</a>
+    <br><a href="#t6">Задача 6. Частотный словарь</a>
+    <br><a href="#task1">Задача A. Правый минус левый</a>
+    <br><a href="#task2">Задача B. Клиппи и Мерлин грабят банк</a>
+    <br><a href="#task3">Задача C. Сумма на подотрезке</a>
+    <br><a href="#task4">Задача D. Пропажа числа</a>
+    <br><a href="#task5">Задача E. Министерство правды</a>
+    <br><a href="#task6">Задача F. Ётта</a>
+    <br><a href="#task7">Задача G. Катя и красивое число</a>
+    <br><a href="#task8">Задача H. Черви и ослы</a>
+    <br><a href="#task9">Задача I. Четные, но не кратные шести</a>
+    <br><a href="#task10">Задача J. Задача без легенды</a>
+    <br><a href="#task11">Задача K. Двапалиндром</a>
+    <br><a href="#task12">Задача L. Пилообразная последовательность</a>
+    <br><a href="#task13">Задача M. Противоположности притягиваются</a>
+    <br><a href="#task14">Задача N. Футбол</a>
+    <br><a href="#task15">Задача O. Медиана Профессора Р.</a>
+    <br><a href="#task16">Задача P. Сортировка подсчётом</a>
+    <br><a href="#task17">Задача Q. Рамки для картин</a>
+    <br><a href="#task18">Задача R. Веселая шутка</a>
+    <br><a href="#task19">Задача S. LuoTianyi и шоу</a>
+    <br><a href="#task20">Задача T. Конец света</a>
+    <br><a href="#task21">Задача U. Мистер совершенство</a>
+  </p>
 </article>
 
 
