--- a/src/components/alg/alg-conspect/sp/pages/elem-sp8.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp8.html
@@ -1,11 +1,13 @@
-<h1>Занятие 8. Базовые алгоритмы #1. Префикс-функция</h1>
+<article class="article">
+  <strong>Спортивное программирование в ЯрГУ</strong>
+  <p><a href="https://vkvideo.ru/@sportprog_yarsu">vkvideo.ru/@sportprog_yarsu</a></p>
+</article>
 
 
 <article class="article">
-  <p>Конспект курса <strong>Спортивное программирование в ЯрГУ</strong></p>
-  <p>Конспект видео <strong>Занятие 8. Базовые алгоритмы #1. Префикс-функция</strong> от 2024.11.02</p>
-  <p><a href="https://vkvideo.ru/@sportprog_yarsu">vkvideo.ru/@sportprog_yarsu</a></p>
-  <p><a href="https://codeforces.com/group/1LSR3R5twn/contest/563482">Codeforces Контест 563482</a></p>
+  <h1>Занятие 8. Базовые алгоритмы #1. Префикс-функция</h1>
+  <p>Конспект видео от 2024.11.02</p>
+  <p><a href="https://codeforces.com/group/1LSR3R5twn/contest/563482" target="_blank">Codeforces Контест 563482</a></p>
 </article>
 
 
@@ -13,23 +15,27 @@
 <article class="article">
   <h2>Содержание</h2>
 
-  <p><a href="#p">Префикс-функция</a></p>
-  <p><a href="#t1">Задача 1. Найти сумму от l до r</a></p>
-  <p><a href="#t2">Задача 2. Найти сумму в матрице</a></p>
-  <p><a href="#task1">Задача A. Трудная задача</a></p>
-  <p><a href="#task2">Задача B. Интервалы</a></p>
-  <p><a href="#task3">Задача C. Сумма чисел в массиве</a></p>
-  <p><a href="#task4">Задача D. Массивные запросы</a></p>
-  <p><a href="#task5">Задача E. Илья и запросы</a></p>
-  <p><a href="#task6">Задача F. Дорога домой</a></p>
-  <p><a href="#task7">Задача G. Битые сектора</a></p>
-  <p><a href="#task8">Задача H. Шифрование сообщений</a></p>
-  <p><a href="#task9">Задача I. Егор и массив</a></p>
-  <p><a href="#task10">Задача J. Злобный гений</a></p>
-  <p><a href="#task11">Задача K. Pekora и батуты</a></p>
-  <p><a href="#task12">Задача L. Also Try Minecraft</a></p>
-  <p><a href="#task13">Задача M. Девочка и максимальная сумма</a></p>
-  <p><a href="#task14">Задача N. Верстовые столбы</a></p>
+  <p>
+    <a href="#p">Префикс-функция</a>
+  </p>
+  <p>
+    <a href="#t1">Задача 1. Найти сумму от l до r</a>
+    <br><a href="#t2">Задача 2. Найти сумму в матрице</a>
+    <br><a href="#task1">Задача A. Трудная задача</a>
+    <br><a href="#task2">Задача B. Интервалы</a>
+    <br><a href="#task3">Задача C. Сумма чисел в массиве</a>
+    <br><a href="#task4">Задача D. Массивные запросы</a>
+    <br><a href="#task5">Задача E. Илья и запросы</a>
+    <br><a href="#task6">Задача F. Дорога домой</a>
+    <br><a href="#task7">Задача G. Битые сектора</a>
+    <br><a href="#task8">Задача H. Шифрование сообщений</a>
+    <br><a href="#task9">Задача I. Егор и массив</a>
+    <br><a href="#task10">Задача J. Злобный гений</a>
+    <br><a href="#task11">Задача K. Pekora и батуты</a>
+    <br><a href="#task12">Задача L. Also Try Minecraft</a>
+    <br><a href="#task13">Задача M. Девочка и максимальная сумма</a>
+    <br><a href="#task14">Задача N. Верстовые столбы</a>
+  </p>
 </article>
 
 
