--- a/src/components/alg/alg-conspect/sp/pages/elem-sp9.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp9.html
@@ -1,11 +1,13 @@
-<h1>Занятие 9. Базовые алгоритмы #2. Два указателя</h1>
+<article class="article">
+  <strong>Спортивное программирование в ЯрГУ</strong>
+  <p><a href="https://vkvideo.ru/@sportprog_yarsu">vkvideo.ru/@sportprog_yarsu</a></p>
+</article>
 
 
 <article class="article">
-  <p>Конспект курса <strong>Спортивное программирование в ЯрГУ</strong></p>
-  <p>Конспект видео <strong>Занятие 9. Базовые алгоритмы #2. Два указателя</strong> от 2024.11.09</p>
-  <p><a href="https://vkvideo.ru/@sportprog_yarsu">vkvideo.ru/@sportprog_yarsu</a></p>
-  <p><a href="https://codeforces.com/group/1LSR3R5twn/contest/565018">Codeforces Контест 565018</a></p>
+  <h1>Занятие 9. Базовые алгоритмы #2. Два указателя</h1>
+  <p>Конспект видео от 2024.11.09</p>
+  <p><a href="https://codeforces.com/group/1LSR3R5twn/contest/565018" target="_blank">Codeforces Контест 565018</a></p>
 </article>
 
 
@@ -13,27 +15,31 @@
 <article class="article">
   <h2>Содержание</h2>
 
-  <p><a href="#p1">Два указателя</a></p>
-  <p><a href="#t1">Задача 1. Слияние</a></p>
-  <p><a href="#t2">Задача 2. Поддержка отрезка</a></p>
-  <p><a href="#task1">Задача A. Книги</a></p>
-  <p><a href="#task2">Задача B. Министерство правды</a></p>
-  <p><a href="#task3">Задача C. Правый минус левый</a></p>
-  <p><a href="#task4">Задача D. Сбалансированная команда</a></p>
-  <p><a href="#task5">Задача E. Сумма чисел в массиве</a></p>
-  <p><a href="#task6">Задача F. Любимая последовательность</a></p>
-  <p><a href="#task7">Задача G. Сережа и Дима</a></p>
-  <p><a href="#task8">Задача H. Три части массива</a></p>
-  <p><a href="#task9">Задача I. Бал в БерлГУ</a></p>
-  <p><a href="#task10">Задача J. Точки на прямой</a></p>
-  <p><a href="#task11">Задача K. Съедая конфеты</a></p>
-  <p><a href="#task12">Задача L. Несекретный шифр</a></p>
-  <p><a href="#task13">Задача M. Олимпиада</a></p>
-  <p><a href="#task14">Задача N. Сдвиги</a></p>
-  <p><a href="#task15">Задача O. Прибавляй не прибавляй</a></p>
-  <p><a href="#task16">Задача P. Кефа и компания</a></p>
-  <p><a href="#task17">Задача Q. Медианное сглаживание</a></p>
-  <p><a href="#task18">Задача R. Оденьте их скорее</a></p>
+  <p>
+    <a href="#p1">Два указателя</a>
+    <br><a href="#t1">Задача 1. Слияние</a>
+    <br><a href="#t2">Задача 2. Поддержка отрезка</a>
+  </p>
+  <p>
+    <a href="#task1">Задача A. Книги</a>
+    <br><a href="#task2">Задача B. Министерство правды</a>
+    <br><a href="#task3">Задача C. Правый минус левый</a>
+    <br><a href="#task4">Задача D. Сбалансированная команда</a>
+    <br><a href="#task5">Задача E. Сумма чисел в массиве</a>
+    <br><a href="#task6">Задача F. Любимая последовательность</a>
+    <br><a href="#task7">Задача G. Сережа и Дима</a>
+    <br><a href="#task8">Задача H. Три части массива</a>
+    <br><a href="#task9">Задача I. Бал в БерлГУ</a>
+    <br><a href="#task10">Задача J. Точки на прямой</a>
+    <br><a href="#task11">Задача K. Съедая конфеты</a>
+    <br><a href="#task12">Задача L. Несекретный шифр</a>
+    <br><a href="#task13">Задача M. Олимпиада</a>
+    <br><a href="#task14">Задача N. Сдвиги</a>
+    <br><a href="#task15">Задача O. Прибавляй не прибавляй</a>
+    <br><a href="#task16">Задача P. Кефа и компания</a>
+    <br><a href="#task17">Задача Q. Медианное сглаживание</a>
+    <br><a href="#task18">Задача R. Оденьте их скорее</a>
+  </p>
 </article>
 
 
