--- a/src/components/alg/alg-conspect/stepik/pages/elem-stepik-01.html
+++ b/src/components/alg/alg-conspect/stepik/pages/elem-stepik-01.html
@@ -1,6 +1,6 @@
 <article class="article">
-  Конспект курса со stepika
   <h1>Основы C/C++ для спортивного программирования</h1>
+  Конспект курса
 </article>
 
 
