--- a/src/components/code/code-c/pages/elem-book2.html
+++ b/src/components/code/code-c/pages/elem-book2.html
@@ -46,6 +46,60 @@
     <br><a href="#p4.6">4.6 Функции с длинными руками (84)</a>
     <br><a href="#p4.7">4.7 Рекурсия или раз, два, три (87)</a>
   </p>
+
+  <p>
+    <a href="#p5">5 Функции, указатели, массивы (96)</a>
+    <br><a href="#p5.1">5.1 Функции и массивы (96)</a>
+    <br><a href="#p5.2">5.2 Массивы и указатели (98)</a>
+    <br><a href="#p5.3">5.3 Указатели и массивы (100)</a>
+    <br><a href="#p5.4">5.4 Динамические массивы (102)</a>
+    <br><a href="#p5.5">5.5 Копирование строк (105)</a>
+  </p>
+
+  <p>
+    <a href="#p6">6 Файлы (109)</a>
+    <br><a href="#p6.1">6.1 Падение железного занавеса (109)</a>
+    <br><a href="#p6.2">6.2 Массивы указателей (114)</a>
+    <br><a href="#p6.3">6.3 Указатели на указатели (120)</a>
+    <br><a href="#p6.4">6.4 Файлы - не массивы (123)</a>
+    <br><a href="#p6.5">6.5 Открытие файла (126)</a>
+  </p>
+
+  <p>
+    <a href="#p7">7 Строки (131)</a>
+    <br><a href="#p7.1">7.1 Считалочка (131)</a>
+    <br><a href="#p7.2">7.2 Сортировка строк (136)</a>
+    <br><a href="#p7.3">7.3 Указатель на функцию (138)</a>
+    <br><a href="#p7.4">7.4 Имена функций и указатели (144)</a>
+    <br><a href="#p7.5">7.5 Функция Qsort (146)</a>
+    <br><a href="#p7.6">7.6 Иголка, сено и лыко в строку (151)</a>
+  </p>
+
+  <p>
+    <a href="#p8">8 Основные типы на сборочном конвейере (157)</a>
+    <br><a href="#p8.1">8.1 Перечисления (157)</a>
+    <br><a href="#p8.2">8.2 Двухмерные массивы и указатели на... (163)</a>
+    <br><a href="#p8.3">8.3 Хранение и переработка двухмерных массивов (170)</a>
+    <br><a href="#p8.4">8.4 Записи (174)</a>
+    <br><a href="#p8.5">8.5 Записи и функции (178)</a>
+    <br><a href="#p8.6">8.6 Указатель на запись (182)</a>
+    <br><a href="#p8.7">8.7 Связанные записи (186)</a>
+    <br><a href="#p8.8">8.8 Typedef (191)</a>
+  </p>
+
+  <p>
+    <a href="#p9">9 Большие программы (195)</a>
+    <br><a href="#p9.1">9.1 Разделяй и вляствуй (195)</a>
+    <br><a href="#p9.2">9.2 Extern или Три поросенка (199)</a>
+    <br><a href="#p9.3">9.3 Static (202)</a>
+  </p>
+
+  <p>
+    <a href="#p10">10 Макросы и переходы (210)</a>
+    <br><a href="#p10.1">10.1 Макросы (210)</a>
+    <br><a href="#p10.2">10.2 Управление текстом (215)</a>
+    <br><a href="#p10.3">10.3 Напутствие или GOTO (218)</a>
+  </p>
 </article>
 
 
@@ -242,5 +296,148 @@ int main() {
 <article class="article">
   <div class="anchor" id="p2.5"></div>
   <h3>2.5 Массивы (26)</h3>
+
+  <p>Массив это ряд переменных, у каждой из которых есть специальным номер или индекс. Номера переменных в массиве идут по порядку и начинаются с нуля. Массивы позволяют перейти к следующему числу за счет увеличения индекса на 1. Произвольные 10 чисел в массиве так же легко сложить, как идущие подряд числа от 1 до 10.</p>
+
+  <details>
+    <summary>Программма 5 (27)</summary>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main() {
+  int nums[10] = {5,3,2,4,6,7,11,17,0,13};
+  int sum, i;
+  sum = 0;
+  i = 0;
+  while (i &lt; 10) {
+    sum += nums[i];
+    i++;
+  }
+  printf("sum = %d\n", sum);
+}
+</pre>
+  </details>
+
+  <p>Числа в массиве можно не только складывать. Напишем программу, которая находит максимальное число в массиве.</p>
+
+  <details>
+    <summary>Программа 6 (28)</summary>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main() {
+  int nums[10] = {5,3,2,4,6,7,11,17,0,13};
+  int max, i;
+  max = nums[0];
+  i = 1;
+  while (i &lt; 10) {
+    if (nums[i] > max) {
+      max = nums[i];
+    }
+    i++;
+  }
+  printf("max = %d\n", max);
+}
+</pre>
+  </details>
+
+  <p>Если заранее известно число итераций цикла, удобнее использовать цикл for. Найдем минимальное число в массиве</p>
+
+  <details>
+    <summary>Программа 7 (29)</summary>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main() {
+  int nums[10] = {5,3,2,4,6,7,11,17,0,13};
+  int min;
+  min = nums[0];
+  for (int i = 1; i &lt; 10; i++) {
+    if (nums[i] &lt; min) {
+      min = nums[i];
+    }
+  }
+  printf("min = %d\n", min);
+}
+</pre>
+  </details>
+
+  <p>Расставим элементы в массиве в порядке возрастания. Эта задача называется сортировкой. Сначала найдем максимальный элемент и поставим его в конец массива. Потом найдем максимальный из оставшихлся элементов и т.д.</p>
+
+  <details>
+    <summary>Программа 8 (31)</summary>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main() {
+  int n = 10;
+  int nums[] = {5,3,2,4,6,7,11,17,0,13};
+  int i, j;
+  for (i = n - 1; i > 0; i--) {
+    int max = 0;
+    for (j = 1; j &lt;= i; j++) {
+      if (nums[j] > nums[max]) {
+        max = j;
+      }
+    }
+    int temp = nums[i];
+    nums[i] = nums[max];
+    nums[max] = temp;
+  }
+
+  for (i = 0; i &lt; n; i++) {
+    printf("%d ", nums[i]);
+  }
+}
+</pre>
+  </details>
+
+  <p>Поменяем местами две переменные a и b, не используя временную переменную temp</p>
+
+  <details>
+    <summary>Программа 9 (33)</summary>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main() {
+  int a = 8, b = 11;
+  a = a + b;
+  b = a - b;
+  a = a - b;
+
+  printf("a = %d\nb = %d\n", a, b);
+}
+</pre>
+  </details>
 </article>
 
+
+<!-- 2.6 Как это делается -->
+<article class="article">
+  <div class="anchor" id="p2.6"></div>
+  <h3>2.6 Как это делается (34)</h3>
+
+  <p>Как написать программу сортировки массива. Сначала приходит идея найти максимальный элемент, затем найти следующий максимальный элемент и так далее пока все элементы на встанут на свои места. Но куда девать найденные максимумы? Как не использовать дополнительный массив, а сортировать на месте? Для этого будем помещать найденный максимум в конец массива, а элемент из конца массива помещать туда где нашли максимум.</p>
+  <p>Такая программа должна состоять из двух вложенных циклов. В первом цикле идем от конца массива и каждый раз в текущий элемент будем записывать найденный максимум. Во внутреннем цикле идем от начала и до элемента в который будем класть максимум. Во внутреннем цикле ищется максимальный элемент.</p>
+</article>
+
+
+<!-- 3 Странные типы -->
+<article class="article">
+  <div class="anchor" id="p3"></div>
+  <h3>3 Странные типы (42)</h3>
+</article>
+
+
+<!-- 3.1 Странные типы-1 -->
+<article class="article">
+  <div class="anchor" id="p3.1"></div>
+  <h3>3.1 Странные типы-1 (42)</h3>
+</article>
+
+
+<br><a href="#p3.2">3.2 Странные типы-2 (45)</a>
+<br><a href="#p3.3">3.3 Анатомия типов (47)</a>
+<br><a href="#p3.4">3.4 Подбирайте выражения (53)</a>
+<br><a href="#p3.5">3.5 Строки и символы (57)</a>
+<br><a href="#p3.6">3.6 Указатели (62)</a>
