--- a/src/components/front/front-tools/pages/elem-tools-vscode.html
+++ b/src/components/front/front-tools/pages/elem-tools-vscode.html
@@ -215,7 +215,7 @@
 
 <!-- Горячие клавиши (Hot keys) -->
 <article class="article">
-  <div class="anchor" id="hotkeya"></div>
+  <div class="anchor" id="hotkeys"></div>
   <h3>Горячие клавиши (Hot keys)</h3>
 
   <ul>
