--- a/src/components/alg/alg-conspect/sp/pages/elem-sp3.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp3.html
@@ -1,11 +1,13 @@
-<h1>Занятие 3. Основы С++ #2. Массивы, трудоемкость</h1>
+<article class="article">
+  <strong>Спортивное программирование в ЯрГУ</strong>
+  <p><a href="https://vkvideo.ru/@sportprog_yarsu">vkvideo.ru/@sportprog_yarsu</a></p>
+</article>
 
 
 <article class="article">
-  <p>Конспект курса <strong>Спортивное программирование в ЯрГУ</strong></p>
-  <p>Конспект видео <strong>Занятие 3. Основы С++ #2. Массивы, трудоемкость</strong> от 2024.09.29</p>
-  <p><a href="https://vkvideo.ru/@sportprog_yarsu">vkvideo.ru/@sportprog_yarsu</a></p>
-  <p><a href="https://codeforces.com/group/1LSR3R5twn/contest/552380">Codeforces Контест 552380</a></p>
+  <h1>Занятие 3. Основы С++ #2. Массивы, трудоемкость</h1>
+  <p>Конспект видео от 2024.09.29</p>
+  <p><a href="https://codeforces.com/group/1LSR3R5twn/contest/552380" target="_blank">Codeforces Контест 552380</a></p>
 </article>
 
 
@@ -13,24 +15,28 @@
 <article class="article">
   <h2>Содержание</h2>
 
-  <p><a href="#p1">Массивы</a></p>
-  <p><a href="#p2">Трудоемкость</a></p>
-  <p><a href="#p3">Сортировка</a></p>
-  <p><a href="#task1">Задача A. Лестница, Пик или Ничего</a></p>
-  <p><a href="#task2">Задача B. Кража в магазине</a></p>
-  <p><a href="#task3">Задача C. Подарки</a></p>
-  <p><a href="#task4">Задача D. Тройка</a></p>
-  <p><a href="#task5">Задача E. Честный тренер</a></p>
-  <p><a href="#task6">Задача F. Массив с нечетной суммой</a></p>
-  <p><a href="#task7">Задача G. Напитки</a></p>
-  <p><a href="#task8">Задача H. Кольцевая</a></p>
-  <p><a href="#task9">Задача I. Сортировка кубов</a></p>
-  <p><a href="#task10">Задача J. ACM ICPC</a></p>
-  <p><a href="#task11">Задача K. Влад и столовые</a></p>
-  <p><a href="#task12">Задача L. Филя и задание</a></p>
-  <p><a href="#task13">Задача M. Деление на группы</a></p>
-  <p><a href="#task14">Задача N. Максимизация пересечений (простая версия)</a></p>
-  <p><a href="#task15">Задача O. Масштабирование</a></p>
+  <p>
+    <a href="#p1">Массивы</a>
+    <br><a href="#p2">Трудоемкость</a>
+    <br><a href="#p3">Сортировка</a>
+  </p>
+  <p>
+    <a href="#task1">Задача A. Лестница, Пик или Ничего</a>
+    <br><a href="#task2">Задача B. Кража в магазине</a>
+    <br><a href="#task3">Задача C. Подарки</a>
+    <br><a href="#task4">Задача D. Тройка</a>
+    <br><a href="#task5">Задача E. Честный тренер</a>
+    <br><a href="#task6">Задача F. Массив с нечетной суммой</a>
+    <br><a href="#task7">Задача G. Напитки</a>
+    <br><a href="#task8">Задача H. Кольцевая</a>
+    <br><a href="#task9">Задача I. Сортировка кубов</a>
+    <br><a href="#task10">Задача J. ACM ICPC</a>
+    <br><a href="#task11">Задача K. Влад и столовые</a>
+    <br><a href="#task12">Задача L. Филя и задание</a>
+    <br><a href="#task13">Задача M. Деление на группы</a>
+    <br><a href="#task14">Задача N. Максимизация пересечений (простая версия)</a>
+    <br><a href="#task15">Задача O. Масштабирование</a>
+  </p>
 </article>
 
 
