--- a/src/components/code/code-ref/pages/elem-unicode.html
+++ b/src/components/code/code-ref/pages/elem-unicode.html
@@ -15,6 +15,8 @@
     <p><a href="#sur">Суррогатная пара</a></p>
     <p><a href="#utf">UTF-8, UTF-16, UTF-32</a></p>
     <p><a href="#need">Нужные unicode символы</a></p>
+    <p><a href="#sup">Надстрочные символы (superscript)</a></p>
+    <p><a href="#sub">Подстрочные символы (subscript)</a></p>
   </div>
 
 </div>
@@ -74,76 +76,131 @@
 <article class="article">
   <div class="anchor" id="need"></div>
   <h2>Нужные unicode символы</h2>
+
   <pre>&#9; &amp;#x9;    &#9; Horiz Tab</pre>
   <pre>&#9; &amp;#x20;   &#9; Space</pre>
-  <pre>&quot;    &#9; &amp;#x22;   &#9; &amp;qout;</pre>
-  <pre>&amp;     &#9; &amp;#x26;   &#9; &amp;amp;</pre>
-  <pre>&apos;    &#9; &amp;#x27;   &#9; &amp;apos;</pre>
-  <pre>&lt;      &#9; &amp;#x3C;   &#9; &amp;lt;</pre>
-  <pre>&equals;  &#9; &amp;#x3D;   &#9; &amp;equals;</pre>
-  <pre>&gt;      &#9; &amp;#x3E;   &#9; &amp;gt;</pre>
-  <pre>&#x7E;    &#9; &amp;#x7E;   &#9; Tilde</pre>
-  <pre>&#xB0;    &#9; &amp;#xB0;   &#9; Degree Sign</pre>
-  <pre>&plusmn;  &#9; &amp;#xB1;   &#9; &amp;plusmn;</pre>
-  <pre>&#xB2;    &#9; &amp;#xB2;   &#9; Superscript Two</pre>
-  <pre>&#xB3;    &#9; &amp;#xB3;   &#9; Superscript Three</pre>
-  <pre>&#xB9;    &#9; &amp;#xB9;   &#9; Superscript One</pre>
-  <pre>&#x2010;  &#9; &amp;#x2010; &#9; Hyphen</pre>
-  <pre>&#x2012;  &#9; &amp;#x2012; &#9; Figure Dash</pre>
-  <pre>&#x2013;  &#9; &amp;#x2013; &#9; En Dash</pre>
-  <pre>&#x2014;  &#9; &amp;#x2014; &#9; Em Dash</pre>
-  <pre>&#x2015;  &#9; &amp;#x2015; &#9; Horizontal Bar</pre>
-  <pre>&bull;    &#9; &amp;#x2022; &#9; &amp;bull;</pre>
-  <pre>&#x2027;  &#9; &amp;#x2027;</pre>
-  <pre>&#x2070;  &#9; &amp;#x2070; &#9; Superscript Zero</pre>
-  <pre>&#x2074;  &#9; &amp;#x2074; &#9; Superscript Four</pre>
-  <pre>&#x2075;  &#9; &amp;#x2075; &#9; Superscript Five</pre>
-  <pre>&#x2076;  &#9; &amp;#x2076; &#9; Superscript Six</pre>
-  <pre>&#x2077;  &#9; &amp;#x2077; &#9; Superscript Seven</pre>
-  <pre>&#x2078;  &#9; &amp;#x2078; &#9; Superscript Eight</pre>
-  <pre>&#x2079;  &#9; &amp;#x2079; &#9; Superscript Nine</pre>
-  <pre>&#x207A;  &#9; &amp;#x207A; &#9; Superscript Plus</pre>
-  <pre>&#x207B;  &#9; &amp;#x207B; &#9; Superscript Minus</pre>
-  <pre>&#x207C;  &#9; &amp;#x207C; &#9; Superscript Equals</pre>
-  <pre>&#x207D;  &#9; &amp;#x207D; &#9; Superscript Left Parenthesis</pre>
-  <pre>&#x207E;  &#9; &amp;#x207E; &#9; Superscript Right Parenthesis</pre>
-  <pre>&#x207F;  &#9; &amp;#x207F; &#9; Superscript n</pre>
-  <pre>&#x2080;  &#9; &amp;#x2080; &#9; Subrscript Zero</pre>
-  <pre>&#x2081;  &#9; &amp;#x2081; &#9; Subrscript One</pre>
-  <pre>&#x2082;  &#9; &amp;#x2082; &#9; Subrscript Two</pre>
-  <pre>&#x2083;  &#9; &amp;#x2083; &#9; Subrscript Three</pre>
-  <pre>&#x2084;  &#9; &amp;#x2084; &#9; Subrscript Four</pre>
-  <pre>&#x2085;  &#9; &amp;#x2085; &#9; Subrscript Five</pre>
-  <pre>&#x2086;  &#9; &amp;#x2086; &#9; Subrscript Six</pre>
-  <pre>&#x2087;  &#9; &amp;#x2087; &#9; Subrscript Seven</pre>
-  <pre>&#x2088;  &#9; &amp;#x2088; &#9; Subrscript Eight</pre>
-  <pre>&#x2089;  &#9; &amp;#x2089; &#9; Subrscript Nine</pre>
-  <pre>&#x208A;  &#9; &amp;#x208A; &#9; Subrscript Plus</pre>
-  <pre>&#x208B;  &#9; &amp;#x208B; &#9; Subrscript Minus</pre>
-  <pre>&#x208C;  &#9; &amp;#x208C; &#9; Subrscript Equals</pre>
-  <pre>&#x208D;  &#9; &amp;#x208D; &#9; Subrscript Left Parenthesis</pre>
-  <pre>&#x208E;  &#9; &amp;#x208E; &#9; Subrscript Right Parenthesis</pre>
-  <pre>&#x2190;  &#9; &amp;#x2190; &#9; Leftwards Arrow</pre>
-  <pre>&#x2191;  &#9; &amp;#x2191; &#9; Upwards Arrow</pre>
-  <pre>&#x2192;  &#9; &amp;#x2192; &#9; Rightwards Arrow</pre>
-  <pre>&#x2193;  &#9; &amp;#x2193; &#9; Downwards Arrow</pre>
-  <pre>&#x2194;  &#9; &amp;#x2194; &#9; Left Right Arrow</pre>
-  <pre>&#x2195;  &#9; &amp;#x2195; &#9; Up Down Arrow</pre>
-  <pre>&#x2196;  &#9; &amp;#x2196; &#9; North West Arrow</pre>
-  <pre>&#x2197;  &#9; &amp;#x2197; &#9; North East Arrow</pre>
-  <pre>&#x2198;  &#9; &amp;#x2198; &#9; South East Arrow</pre>
-  <pre>&#x2199;  &#9; &amp;#x2199; &#9; South West Arrow</pre>
-  <pre>&#x2219;  &#9; &amp;#x2219; &#9; Bullet Operator</pre>
-  <pre>&#x2248;  &#9; &amp;#x2248; &#9; Almost Equal To</pre>
-  <pre>&#x2260;  &#9; &amp;#x2260; &#9; &amp;ne;</pre>
-  <pre>&#x2261;  &#9; &amp;#x2261; &#9; Identical To</pre>
-  <pre>&le;      &#9; &amp;#x2264; &#9; &amp;le;</pre>
-  <pre>&ge;      &#9; &amp;#x2265; &#9; &amp;ge;</pre>
-  <pre>&#x2500;  &#9; &amp;#x2500; &#9; Box Drawings Light Horizontal</pre>
-  <pre>&#x2502;  &#9; &amp;#x2502; &#9; Box Drawings Light Vertical</pre>
-  <pre>&#x250C;  &#9; &amp;#x250C; &#9; Box Drawings Light Down and Right</pre>
-  <pre>&#x2510;  &#9; &amp;#x2510; &#9; Box Drawings Light Down and Left</pre>
-  <pre>&#x2514;  &#9; &amp;#x2514; &#9; Box Drawings Light Up and Right</pre>
-  <pre>&#x2518;  &#9; &amp;#x2518; &#9; Box Drawings Light Up and Left</pre>
+  <pre>&quot;    &#9; &amp;#x22;    &#9; &amp;qout;</pre>
+  <pre>&amp;     &#9; &amp;#x26;    &#9; &amp;amp;</pre>
+  <pre>&apos;    &#9; &amp;#x27;    &#9; &amp;apos;</pre>
+  <pre>&lt;      &#9; &amp;#x3C;    &#9; &amp;lt;</pre>
+  <pre>&equals;  &#9; &amp;#x3D;    &#9; &amp;equals;</pre>
+  <pre>&gt;      &#9; &amp;#x3E;    &#9; &amp;gt;</pre>
+  <pre>&#x7E;    &#9; &amp;#x7E;    &#9; Tilde</pre>
+  <pre>&#xB0;    &#9; &amp;#xB0;    &#9; Degree Sign</pre>
+  <pre>&plusmn;  &#9; &amp;#xB1;    &#9; &amp;plusmn;</pre>
+  <pre>&#x2010;  &#9; &amp;#x2010;  &#9; Hyphen</pre>
+  <pre>&#x2012;  &#9; &amp;#x2012;  &#9; Figure Dash</pre>
+  <pre>&#x2013;  &#9; &amp;#x2013;  &#9; En Dash</pre>
+  <pre>&#x2014;  &#9; &amp;#x2014;  &#9; Em Dash</pre>
+  <pre>&#x2015;  &#9; &amp;#x2015;  &#9; Horizontal Bar</pre>
+  <pre>&bull;    &#9; &amp;#x2022;  &#9; &amp;bull;</pre>
+  <pre>&#x2027;  &#9; &amp;#x2027;  &#9; Hyphenation Point</pre>
+  <pre>&#x2190;  &#9; &amp;#x2190;  &#9; Leftwards Arrow</pre>
+  <pre>&#x2191;  &#9; &amp;#x2191;  &#9; Upwards Arrow</pre>
+  <pre>&#x2192;  &#9; &amp;#x2192;  &#9; Rightwards Arrow</pre>
+  <pre>&#x2193;  &#9; &amp;#x2193;  &#9; Downwards Arrow</pre>
+  <pre>&#x2194;  &#9; &amp;#x2194;  &#9; Left Right Arrow</pre>
+  <pre>&#x2195;  &#9; &amp;#x2195;  &#9; Up Down Arrow</pre>
+  <pre>&#x2196;  &#9; &amp;#x2196;  &#9; North West Arrow</pre>
+  <pre>&#x2197;  &#9; &amp;#x2197;  &#9; North East Arrow</pre>
+  <pre>&#x2198;  &#9; &amp;#x2198;  &#9; South East Arrow</pre>
+  <pre>&#x2199;  &#9; &amp;#x2199;  &#9; South West Arrow</pre>
+  <pre>&#x2219;  &#9; &amp;#x2219;  &#9; Bullet Operator</pre>
+  <pre>&#x2248;  &#9; &amp;#x2248;  &#9; Almost Equal To</pre>
+  <pre>&#x2260;  &#9; &amp;#x2260;  &#9; &amp;ne;</pre>
+  <pre>&#x2261;  &#9; &amp;#x2261;  &#9; Identical To</pre>
+  <pre>&le;      &#9; &amp;#x2264;  &#9; &amp;le;</pre>
+  <pre>&ge;      &#9; &amp;#x2265;  &#9; &amp;ge;</pre>
+  <pre>&#x2500;  &#9; &amp;#x2500;  &#9; Box Drawings Light Horizontal</pre>
+  <pre>&#x2502;  &#9; &amp;#x2502;  &#9; Box Drawings Light Vertical</pre>
+  <pre>&#x250C;  &#9; &amp;#x250C;  &#9; Box Drawings Light Down and Right</pre>
+  <pre>&#x2510;  &#9; &amp;#x2510;  &#9; Box Drawings Light Down and Left</pre>
+  <pre>&#x2514;  &#9; &amp;#x2514;  &#9; Box Drawings Light Up and Right</pre>
+  <pre>&#x2518;  &#9; &amp;#x2518;  &#9; Box Drawings Light Up and Left</pre>
 </article>
 
+
+<!-- Надстрочные символы (superscript) -->
+<article class="article">
+  <div class="anchor" id="sup"></div>
+  <h2>Надстрочные символы (superscript)</h2>
+
+  <pre>&#x2070;  &#9; &amp;#x2070;  &#9; Superscript Zero</pre>
+  <pre>&#xB9;    &#9; &amp;#xB9;    &#9; Superscript One</pre>
+  <pre>&#xB2;    &#9; &amp;#xB2;    &#9; Superscript Two</pre>
+  <pre>&#xB3;    &#9; &amp;#xB3;    &#9; Superscript Three</pre>
+  <pre>&#x2074;  &#9; &amp;#x2074;  &#9; Superscript Four</pre>
+  <pre>&#x2075;  &#9; &amp;#x2075;  &#9; Superscript Five</pre>
+  <pre>&#x2076;  &#9; &amp;#x2076;  &#9; Superscript Six</pre>
+  <pre>&#x2077;  &#9; &amp;#x2077;  &#9; Superscript Seven</pre>
+  <pre>&#x2078;  &#9; &amp;#x2078;  &#9; Superscript Eight</pre>
+  <pre>&#x2079;  &#9; &amp;#x2079;  &#9; Superscript Nine</pre>
+  <pre>&#x1D43;  &#9; &amp;#x1D43;  &#9; Superscript a</pre>
+  <pre>&#x1D47;  &#9; &amp;#x1D47;  &#9; Superscript b</pre>
+  <pre>&#x1D9C;  &#9; &amp;#x1D9C;  &#9; Superscript c</pre>
+  <pre>&#x1D48;  &#9; &amp;#x1D48;  &#9; Superscript d</pre>
+  <pre>&#x1D49;  &#9; &amp;#x1D49;  &#9; Superscript e</pre>
+  <pre>&#x1DA0;  &#9; &amp;#x1DA0;  &#9; Superscript f</pre>
+  <pre>&#x1D4D;  &#9; &amp;#x1D4D;  &#9; Superscript g</pre>
+  <pre>&#x02B0;  &#9; &amp;#x02B0;  &#9; Superscript h</pre>
+  <pre>&#x2071;  &#9; &amp;#x2071;  &#9; Superscript i</pre>
+  <pre>&#x02B2;  &#9; &amp;#x02B2;  &#9; Superscript j</pre>
+  <pre>&#x1D4F;  &#9; &amp;#x1D4F;  &#9; Superscript k</pre>
+  <pre>&#x02E1;  &#9; &amp;#x02E1;  &#9; Superscript l</pre>
+  <pre>&#x1D50;  &#9; &amp;#x1D50;  &#9; Superscript m</pre>
+  <pre>&#x207F;  &#9; &amp;#x207F;  &#9; Superscript n</pre>
+  <pre>&#x1D52;  &#9; &amp;#x1D52;  &#9; Superscript o</pre>
+  <pre>&#x1D56;  &#9; &amp;#x1D56;  &#9; Superscript p</pre>
+  <pre>&#x02B3;  &#9; &amp;#x02B3;  &#9; Superscript r</pre>
+  <pre>&#x02E2;  &#9; &amp;#x02E2;  &#9; Superscript s</pre>
+  <pre>&#x1D57;  &#9; &amp;#x1D57;  &#9; Superscript t</pre>
+  <pre>&#x1D58;  &#9; &amp;#x1D58;  &#9; Superscript u</pre>
+  <pre>&#x1D5B;  &#9; &amp;#x1D5B;  &#9; Superscript v</pre>
+  <pre>&#x02B7;  &#9; &amp;#x02B7;  &#9; Superscript w</pre>
+  <pre>&#x02E3;  &#9; &amp;#x02E3;  &#9; Superscript x</pre>
+  <pre>&#x02B8;  &#9; &amp;#x02B8;  &#9; Superscript y</pre>
+  <pre>&#x1DBB;  &#9; &amp;#x1DBB;  &#9; Superscript z</pre>
+  <pre>&#x207A;  &#9; &amp;#x207A;  &#9; Superscript Plus</pre>
+  <pre>&#x207B;  &#9; &amp;#x207B;  &#9; Superscript Minus</pre>
+  <pre>&#x207C;  &#9; &amp;#x207C;  &#9; Superscript Equals</pre>
+  <pre>&#x207D;  &#9; &amp;#x207D;  &#9; Superscript Left Parenthesis</pre>
+  <pre>&#x207E;  &#9; &amp;#x207E;  &#9; Superscript Right Parenthesis</pre>
+
+</article>
+
+
+<!-- Подстрочные символы (subscript) -->
+<article class="article">
+  <div class="anchor" id="sub"></div>
+  <h2>Подстрочные символы (subscript)</h2>
+
+  <pre>&#x2080;  &#9; &amp;#x2080;  &#9; Subscript Zero</pre>
+  <pre>&#x2081;  &#9; &amp;#x2081;  &#9; Subscript One</pre>
+  <pre>&#x2082;  &#9; &amp;#x2082;  &#9; Subscript Two</pre>
+  <pre>&#x2083;  &#9; &amp;#x2083;  &#9; Subscript Three</pre>
+  <pre>&#x2084;  &#9; &amp;#x2084;  &#9; Subscript Four</pre>
+  <pre>&#x2085;  &#9; &amp;#x2085;  &#9; Subscript Five</pre>
+  <pre>&#x2086;  &#9; &amp;#x2086;  &#9; Subscript Six</pre>
+  <pre>&#x2087;  &#9; &amp;#x2087;  &#9; Subscript Seven</pre>
+  <pre>&#x2088;  &#9; &amp;#x2088;  &#9; Subscript Eight</pre>
+  <pre>&#x2089;  &#9; &amp;#x2089;  &#9; Subscript Nine</pre>
+  <pre>&#x2090;  &#9; &amp;#x2090;  &#9; Subscript a</pre>
+  <pre>&#x2091;  &#9; &amp;#x2091;  &#9; Subscript e</pre>
+  <pre>&#x2095;  &#9; &amp;#x2095;  &#9; Subscript h</pre>
+  <pre>&#x1D62;  &#9; &amp;#x1D62;  &#9; Subscript i</pre>
+  <pre>&#x2096;  &#9; &amp;#x2096;  &#9; Subscript k</pre>
+  <pre>&#x2097;  &#9; &amp;#x2097;  &#9; Subscript l</pre>
+  <pre>&#x2098;  &#9; &amp;#x2098;  &#9; Subscript m</pre>
+  <pre>&#x2099;  &#9; &amp;#x2099;  &#9; Subscript n</pre>
+  <pre>&#x2092;  &#9; &amp;#x2092;  &#9; Subscript o</pre>
+  <pre>&#x209A;  &#9; &amp;#x209A;  &#9; Subscript p</pre>
+  <pre>&#x209B;  &#9; &amp;#x209B;  &#9; Subscript s</pre>
+  <pre>&#x209C;  &#9; &amp;#x209C;  &#9; Subscript t</pre>
+  <pre>&#x2093;  &#9; &amp;#x2093;  &#9; Subscript x</pre>
+  <pre>&#x208A;  &#9; &amp;#x208A;  &#9; Subscript Plus</pre>
+  <pre>&#x208B;  &#9; &amp;#x208B;  &#9; Subscript Minus</pre>
+  <pre>&#x208C;  &#9; &amp;#x208C;  &#9; Subscript Equals</pre>
+  <pre>&#x208D;  &#9; &amp;#x208D;  &#9; Subscript Left Parenthesis</pre>
+  <pre>&#x208E;  &#9; &amp;#x208E;  &#9; Subrscript Right Parenthesis</pre>
+
+</article>
